# CompGen

./: .gitignore  pyproject.toml
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
compgene/: .gitignore  README.md  pyproject.toml
compgene/config/: config.yaml
compgene/logs/: .gitkeep
compgene/profiles/local/: config.yaml
compgene/resources/: .gitkeep
compgene/results/: .gitkeep
compgene/schemas/: config.schema.yaml  run.schema.json
compgene/tests/: conftest.py  test_common_helpers.py  test_config_validation.py  test_validate_config_cli.py
compgene/tests/fixtures/: .gitkeep  invalid_config.yaml  valid_config.yaml
compgene/workflow/: Snakefile
compgene/workflow/adapters/: __init__.py  base.py
compgene/workflow/envs/: .gitkeep
compgene/workflow/lib/: __init__.py  audit.py  checksum.py  errors.py  logging.py  test_audit.py  test_checksum.py  test_errors.py  test_io.py  test_logging.py  test_runner.py
compgene/workflow/rules/: annotation.smk  common.smk  expression.smk  ingest.smk  matrices.smk  orthology.smk  qc.smk  reporting.smk  standardize.smk  validation.smk
compgene/workflow/scripts/: .gitkeep  run_adapter.py  test_run_adapter.py  validate_config.py
config/: config.yaml  full_genome.yaml  test_epic5.yaml  test_epic5_small.yaml
docs/: automation-summary.md
docs/implementation-artifacts/: 1-1-project-skeleton-init.md  1-2-config-schema-validation.md  1-3-error-code-system.md  1-4-logging-audit-foundation.md  1-5-base-adapter-framework.md  1-6-unified-runner-retry.md  1-7-checkpoint-resume-dryrun.md  2-1-gff-fasta-parser.md  2-2-local-data-standardization.md  2-2b-biopython-utils.md  2-3-ncbi-annotation-download.md  2-4-busco-qc.md  3-1-orthofinder-adapter.md  3-2-orthogroups-table.md  5-1-liftoff-adapter.md  5-2-true-vs-false-absence.md  5-3-lifted-annotation-file.md  6a-2-multi-species-comparison.md  sprint-status.yaml
docs/planning-artifacts/: architecture-diagrams.md  architecture.md  bmm-workflow-status.yaml  epics-and-stories.md  epics.md  implementation-readiness-report-2026-01-20.md  prd.md  product-brief-CompGene-2026-01-20.md  render_diagrams.py  render_diagrams_kroki.py
profile/local/: config.yaml
profile/sge/: config.yaml
schemas/: config.schema.yaml
scripts/: qsub_liftoff_lct.sh  qsub_liftoff_mmu.sh
tests/: conftest.py  test_config_validation.py  test_project_structure.py
workflow/: Snakefile
(+71 files in other folders)
